# aa_stat

./: .gitignore  CHANGELOG  LICENSE  MANIFEST.in  README.MD  example.cfg  open_search.params  pyproject.toml  setup.py
.github/workflows/: pythonpackage.yml  pythonpublish.yml
AA_stat/: AA_stat.py  __init__.py  aa_search.py  default.cfg  example.cfg  html.py  io.py  locTools.py  localization.py  main.py  open_search.params  osPipe.py  recommendations.py  remod.py  report.template  stats.py  tests.py  utils.py  version.py
AA_stat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
AA_stat/gui/: gui.py  logging.py  shortcut.py
